--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
+email: david.teuscher.96@gmail.com
 phone: 888 888 88 88
 address:
   street: 450 Serra Mall
