--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: david.teuscher.96@gmail.com
-phone: 888 888 88 88
+#phone: 888 888 88 88
 address:
   street: 450 Serra Mall
   city: Stanford
@@ -59,7 +59,7 @@ contact_links:
 
 main_menu:
   enable: true
-  align: l
+  align: r
   show_logo: true
   show_language: false
   show_day_night: true
@@ -68,8 +68,8 @@ main_menu:
 
 # Localization
 
-date_format: 'Jan 2, 2006'
-time_format: '3:04 PM'
+date_format: 'January 2, 2006'
+time_format: '15:04'
 address_format: en-us
 
 # Site features
