Update contact section

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,39 +21,29 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: david.teuscher.96@gmail.com
-#phone: 888 888 88 88
+phone: False
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
+  street: 
+  city: Provo
+  region: UT
+  postcode:
   country: United States
   country_code: US
-coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+coordinates: 
+  latitude: False
+  longitude: False
+directions: False
+office_hours: False
+appointment_url: False
 contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/Twitter'
-  - icon: skype
+    link: 'https://twitter.com/TeuscherDavid'
+  - icon: github
     icon_pack: fab
-    name: Skype Me
-    link: 'skype:echo123?call'
-  - icon: keybase
-    icon_pack: fab
-    name: Chat on Keybase
-    link: 'https://keybase.io/'
-  - icon: comments
-    icon_pack: fas
-    name: Discuss on Forum
-    link: 'https://discourse.gohugo.io'
+    name: Check out my GitHub profile
+    link: 'https://github.com/dteuscher1'  
 
 # Site header
 
