--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,7 +15,7 @@ font_size: L
 site_type: Person
 local_business_type: ''
 org_name: ''
-description: ''
+description: 'A data science portfolio for David Teuscher'
 twitter: ''
 
 # Contact (edit or remove options as required)
