--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,10 +8,10 @@ main:
     url: '#about'
     weight: 10
   - name: Projects
-    url: '#projects'
+    url: 'project/'
     weight: 30
   - name: Posts
-    url: '#posts'
+    url: 'post/'
     weight: 20
   - name: Contact
     url: '#contact'
